--- a/ForumBackEnd/appsettings.json
+++ b/ForumBackEnd/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "Super_Secret_Ob_Key": {
+    "Token": "ASJNCEWOIUNCEOINWEOINCEWOINEWIUNDQ"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
